# qdsDataInterface

./: .clang-format  CMakeLists.txt  README.md
include/: data_source_factory.hpp  declspec.hpp  exception.hpp  i_data_source_in.hpp  i_data_source_in_out.hpp  i_data_source_out.hpp  measurement.hpp  types.hpp
src/: data_source_factory.cpp  data_source_internal.cpp  data_source_internal.hpp  data_source_internal.test.cpp  mem_info.hpp  ring_buffer.cpp  ring_buffer.hpp  ring_buffer.test.cpp
src/parsing/: data_validator.cpp  data_validator.hpp  data_validator.test.cpp  json_parser.hpp
